# ADN

./: .gitignore  .replit  README.md  alex_suivi.doc  flasktest.py  main.py  pyproject.toml  requirements.txt  victor_suivi.doc
modules/: DNAGeneration.py  DictionaryGEN.py  Logsave.py  NewTransTrad.py  OldTransTrad.py  Traduction.draw  TransTrad.py  del.py
notes/: CompteRenduAlexandreLisiecki.docx  CompteRenduVictorFaucher.odt  Suivi General.doc  alex_suivi.doc  suivi_general.doc  todo.txt  victor_suivi.doc
static/css/: main.css  maindark.css
static/js/: main.js
templates/: .home.html.swp  authors.html  base.html  home.html  index.html  login.html  logs.html  mobile.html  results.html  signup.html  test.html  user.html
