[tool.poetry]
name = "dna generator"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
datetime3 = "^3.8.0"
Flask-Mobility = "^1.1.0"
SQLAlchemy = "^1.4.42"
flask-sqlalchemy = "^3.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
